--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/Bumpkin-Pi/StardewProfile
 [submodule "typingSpeedTest"]
 	path = typingSpeedTest
-	url = https://github.com/Bumpkin-Pi/typingSpeedTest.git
+	url = https://github.com/Bumpkin-Pi/typingSpeedTest
